Tell git to ignore asm-offsets.s
The generated file asm-offsets.s may be found at various depths in the
arch subdirectories, so simply ignore it throughout the tree.

Signed-off-by: Laurence Withers <lwithers@guralp.com>
Acked-by: Mike Frysinger <vapier@gentoo.org>

--- a/.gitignore
+++ b/.gitignore
@@ -46,8 +46,7 @@
 /reloc_off
 
 /include/generated/
-/lib/asm-offsets.s
-/arch/*/cpu/asm-offsets.s
+asm-offsets.s
 
 # stgit generated dirs
 patches-*
