nitrogen8mm_som: add imx8mn-nitrogen8mn_som
Signed-off-by: Troy Kisky <troy.kisky@boundarydevices.com>

--- a/arch/arm/mach-imx/imx8m/Kconfig
+++ b/arch/arm/mach-imx/imx8m/Kconfig
@@ -72,7 +72,12 @@ config TARGET_IMX8MN_EVK
 	select IMX8M_DDR4
 
 config TARGET_NITROGEN8MN
-	bool "nitrogen8mm"
+	bool "nitrogen8mn"
+	select IMX8MN
+	select SUPPORT_SPL
+
+config TARGET_NITROGEN8MN_SOM
+	bool "nitrogen8mn_som"
 	select IMX8MN
 	select SUPPORT_SPL
 
