--- a/arch/arm/mach-imx/imx8m/Kconfig
+++ b/arch/arm/mach-imx/imx8m/Kconfig
@@ -9,11 +9,11 @@ config IMX8MQ
 	select IMX8M
 
 config IMX8MM
-	bool
+	bool "imx8mm"
 	select IMX8M
 
 config IMX8MN
-	bool
+	bool "imx8mn"
 	select IMX8M
 
 choice
@@ -33,6 +33,10 @@ config TARGET_HL8MM
 config TARGET_MOO
 	bool "moo"
 	select IMX8MM
+	select SUPPORT_SPL
+
+config TARGET_NITROGEN8_2ETH
+	bool "nitrogen8_2eth"
 	select SUPPORT_SPL
 
 config TARGET_NITROGEN8M
@@ -91,6 +95,7 @@ source "board/freescale/imx8mn_evk/Kconfig"
 source "board/boundary/bio/Kconfig"
 source "board/boundary/hl8mm/Kconfig"
 source "board/boundary/moo/Kconfig"
+source "board/boundary/nitrogen8_2eth/Kconfig"
 source "board/boundary/nitrogen8m/Kconfig"
 source "board/boundary/nitrogen8m_som/Kconfig"
 source "board/boundary/nitrogen8mm/Kconfig"
