--- a/arch/arm/mach-imx/imx8m/Kconfig
+++ b/arch/arm/mach-imx/imx8m/Kconfig
@@ -25,6 +25,11 @@ config TARGET_BIO
 	select IMX8MQ
 	select SUPPORT_SPL
 
+config TARGET_DWE
+	bool "dwe"
+	select IMX8MM
+	select SUPPORT_SPL
+
 config TARGET_HL8MM
 	bool "hl8mm"
 	select IMX8MM
@@ -93,6 +98,7 @@ config SYS_SOC
 source "board/freescale/imx8mn_evk/Kconfig"
 
 source "board/boundary/bio/Kconfig"
+source "board/boundary/dwe/Kconfig"
 source "board/boundary/hl8mm/Kconfig"
 source "board/boundary/moo/Kconfig"
 source "board/boundary/nitrogen8_2eth/Kconfig"
