--- a/arch/arm/dts/imx8mm-hl8mm.dts
+++ b/arch/arm/dts/imx8mm-hl8mm.dts
@@ -1,15 +1,6 @@
+// SPDX-License-Identifier: (GPL-2.0+ OR MIT)
 /*
  * Copyright 2018 Boundary Devices
- *
- * This program is free software; you can redistribute it and/or
- * modify it under the terms of the GNU General Public License
- * as published by the Free Software Foundation; either version 2
- * of the License, or (at your option) any later version.
- *
- * This program is distributed in the hope that it will be useful,
- * but WITHOUT ANY WARRANTY; without even the implied warranty of
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
- * GNU General Public License for more details.
  */
 
 /dts-v1/;
@@ -500,7 +491,7 @@
 
 #if 0
 &A53_0 {
-	arm-supply = <&reg_sw4>;
+	arm-supply = <&reg_sw3>;
 };
 
 &clk {
@@ -621,6 +612,7 @@
 				regulator-boot-on;
 				regulator-max-microvolt = <1800000>;
 				regulator-min-microvolt =  <400000>;
+				fast-slew = <1>;
 			};
 
 			reg_sw4: sw4 {
