lshore: ddr calibration data
Signed-off-by: Troy Kisky <troy.kisky@boundarydevices.com>

--- a/board/boundary/lshore/lshore_q1g.cfg
+++ b/board/boundary/lshore/lshore_q1g.cfg
@@ -24,19 +24,19 @@ BOOT_FROM      spi
 #include "asm/arch/iomux.h"
 #include "asm/arch/crm_regs.h"
 
-/* 1 board sample */
-#define MX6_MMDC_P0_MPDGCTRL0_VAL	0x423c0238
-#define MX6_MMDC_P0_MPDGCTRL1_VAL	0x02200224
-#define MX6_MMDC_P1_MPDGCTRL0_VAL	0x42100218
-#define MX6_MMDC_P1_MPDGCTRL1_VAL	0x020c0210
-#define MX6_MMDC_P0_MPRDDLCTL_VAL	0x44484e4e
-#define MX6_MMDC_P1_MPRDDLCTL_VAL	0x484a4a42
-#define MX6_MMDC_P0_MPWRDLCTL_VAL	0x38362c2c
-#define MX6_MMDC_P1_MPWRDLCTL_VAL	0x3032322e
-#define MX6_MMDC_P0_MPWLDECTRL0_VAL	0x00470054
-#define MX6_MMDC_P0_MPWLDECTRL1_VAL	0x003f0044
-#define MX6_MMDC_P1_MPWLDECTRL0_VAL	0x00220024
-#define MX6_MMDC_P1_MPWLDECTRL1_VAL	0x00280036
+/* 2 board sample, 1 QUAD, 1 DUAL */
+#define MX6_MMDC_P0_MPDGCTRL0_VAL	0x4310031c
+#define MX6_MMDC_P0_MPDGCTRL1_VAL	0x03000278
+#define MX6_MMDC_P1_MPDGCTRL0_VAL	0x43140324
+#define MX6_MMDC_P1_MPDGCTRL1_VAL	0x03100258
+#define MX6_MMDC_P0_MPRDDLCTL_VAL	0x42353944
+#define MX6_MMDC_P1_MPRDDLCTL_VAL	0x3f373446
+#define MX6_MMDC_P0_MPWRDLCTL_VAL	0x38393d32
+#define MX6_MMDC_P1_MPWRDLCTL_VAL	0x4336463e
+#define MX6_MMDC_P0_MPWLDECTRL0_VAL	0x0012001a
+#define MX6_MMDC_P0_MPWLDECTRL1_VAL	0x001f001d
+#define MX6_MMDC_P1_MPWLDECTRL0_VAL	0x00190025
+#define MX6_MMDC_P1_MPWLDECTRL1_VAL	0x00100020
 #define WALAT	1
 
 #include "../common/mx6/ddr-setup.cfg"
